<resources>
    <string name="favourite">Favourite</string>

    <string name="app_name">Movies</string>
    <string name="poster_of_movie">Movie poster</string>
    <string name="most_popular">Most popular</string>
    <string name="top_rated">Top rated</string>
    <string name="add_to_favourite">Added to favourite</string>
    <string name="remove_from_favourite">Removed from favourite</string>
    <string name="item_main">Main page</string>
    <string name="item_favourite">Favourite</string>
    <string name="launch_trailer">Launch_trailer</string>
    <string name="movie_title">TITLE</string>
    <string name="movie_original_title">ORIGINAL TITLE</string>
    <string name="movie_rating">RATING</string>
    <string name="release_date">RELEASE DATE</string>
    <string name="movie_description">DESCRIPTION</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
</resources>
